--- a/docs/29.md
+++ b/docs/29.md
@@ -2,92 +2,101 @@
 
 > 原文： [http://docs.cython.org/en/latest/src/userguide/source_files_and_compilation.html](http://docs.cython.org/en/latest/src/userguide/source_files_and_compilation.html)
 
-Cython 源文件名由模块名称后跟`.pyx`扩展名组成，例如名为 primes 的模块将具有名为`primes.pyx`的源文件。
+Cython 源文件名由模块名称后跟 `.pyx` 扩展名组成，例如名为 primes 的模块将具有名为 `primes.pyx` 的源文件。
 
-与 Python 不同，必须编译 Cython 代码。这发生在两个阶段：
+与 Python 不同，Cython 代码必须被编译。这发生在两个阶段：
 
-> *   A `.pyx`文件由 Cython 编译为`.c`文件。
-> *   `.c`文件由 C 编译器编译为`.so`文件（或 Windows 上的`.pyd`文件）
+> *   A `.pyx` 文件由 Cython 编译为 `.c` 文件。
+> *   `.c` 文件由 C 编译器编译为 `.so` 文件（或 Windows 上的 `.pyd` 文件）
 
-一旦编写了`.pyx`文件，就可以通过几种方法将其转换为扩展模块。
+一旦编写了 `.pyx/.py` 文件，就可以通过几种方法将其转换为扩展模块。
 
-以下小节介绍了构建扩展模块的几种方法，以及如何将指令传递给 Cython 编译器。
+下面介绍了构建扩展模块的几种方法，以及如何将指令传递给 Cython 编译器。
 
-## 从命令行编译
+除了Cython之外，还有一些处理 `.pyx` 的工具，比如：
+- Linting: [https://pypi.org/project/cython-lint/](https://pypi.org/project/cython-lint/)
 
-有两种从命令行编译的方法。
+## 命令行编译
 
-*   `cython`命令获取`.py`或`.pyx`文件并将其编译为 C / C ++文件。
-*   `cythonize`命令获取`.py`或`.pyx`文件并将其编译为 C / C ++文件。然后，它将 C / C ++文件编译为可直接从 Python 导入的扩展模块。
+有两种用命令行编译的方法。
 
-### 使用`cython`命令进行编译
+*   `cython` 命令获取 `.py` 或 `.pyx` 文件并将其编译为 C / C ++文件。
+*   `cythonize` 命令获取 `.py` 或 `.pyx` 文件并将其编译为 C / C ++文件。然后，它将 C / C ++文件编译为可直接从 Python 导入的扩展模块。
+
+### 使用 `cython` 命令进行编译
 
 一种方法是使用 Cython 编译器手动编译它，例如：
 
-```py
+```bash
 $ cython primes.pyx
 
 ```
 
-这将生成一个名为`primes.c`的文件，然后需要使用适合您平台的任何选项使用 C 编译器编译该文件以生成扩展模块。有关这些选项，请查看官方 Python 文档。
+这将生成一个名为 `primes.c` 的文件，然后需要使用适合您系统版本的选项来使用 C 编译器编译该文件以生成扩展模块。有关这些选项，请查看官方 Python 文档。
 
-另一种可能更好的方法是使用 Cython 提供的 [`distutils`](https://docs.python.org/3/library/distutils.html#module-distutils "(in Python v3.7)") 扩展。这种方法的好处是它将提供平台特定的编译选项，就像一个精简的自动工具。
+另一种可能更好的方法是使用 Cython 提供的 [`distutils`](https://docs.python.org/3/library/distutils.html#module-distutils "(in Python v3.7)") 扩展。这种方法的好处是它将提供系统特定的编译选项，就像一个精简的自动工具。
 
-### 使用`cythonize`命令进行编译
+### 使用 `cythonize` 命令进行编译
 
-使用您的选项和`.pyx`文件列表运行`cythonize`编译器命令以生成扩展模块。例如：
+带着您的编译选项和 `.pyx` 文件列表一起运行 `cythonize` 编译器命令可以生成扩展模块。例如：
 
-```py
+```bash
 $ cythonize -a -i yourmod.pyx
 
 ```
 
-这将创建一个`yourmod.c`文件（或 C ++模式下的`yourmod.cpp`），对其进行编译，并将生成的扩展模块（`.so`或`.pyd`，具体取决于您的平台）放在源文件旁边以进行直接导入（`-i`建立“到位”）。 `-a`开关另外生成源代码的带注释的 html 文件。
+这将创建一个 `yourmod.c` 文件（或 C ++模式下的 `yourmod.cpp` ）、对其进行编译，并将生成的扩展模块（ `.so` 或 `.pyd`，具体取决于您的系统版本）放在源文件旁边以进行直接导入（ `-i` 表示原位生成）。 `-a` 则会另外生成源代码的带注释的 html 文件。
 
-`cythonize`命令接受多个源文件和类似`**/*.pyx`的 glob 模式作为参数，并且还了解运行多个并行构建作业的常用`-j`选项。在没有其他选项的情况下调用时，它只会将源文件转换为`.c`或`.cpp`文件。传递`-h`标志以获取支持选项的完整列表。
+`cythonize` 命令接受多个源文件以及类似 `**/*.pyx` 的 通配符模式作为参数，并且还支持运行多个并行构建作业的常用 `-j` 选项。在没有其他选项的情况下调用时，它只会将源文件转换为 `.c` 或 `.cpp` 文件。传递 
+ `-h` 标志以获取支持选项的完整列表。
 
-更简单的命令行工具`cython`仅调用源代码转换器。
+更简单的命令行工具 `cython` 仅调用源代码转换器。
 
-在手动编译的情况下，如何编译`.c`文件将根据您的操作系统和编译器而有所不同。用于编写扩展模块的 Python 文档应该包含系统的一些详细信息。例如，在 Linux 系统上，它看起来可能类似于：
+在手动编译的情况下，如何编译 `.c` 文件将根据您的操作系统和编译器而有所不同。用于编写扩展模块的 Python 文档应该包含系统的一些详细信息。例如，在 Linux 系统上，它看起来可能类似于：
 
-```py
+```bash
 $ gcc -shared -pthread -fPIC -fwrapv -O2 -Wall -fno-strict-aliasing \
       -I/usr/include/python3.5 -o yourmod.so yourmod.c
 
 ```
 
-（`gcc`需要有包含头文件的路径和要链接的库的路径。）
+（ `gcc` 需要有包含头文件的路径和要链接的库的路径。）
 
-编译后，将`yourmod.so`（Windows 的`yourmod.pyd`）文件写入目标目录，您的模块`yourmod`可以像任何其他 Python 模块一样导入。请注意，如果您不依赖于`cythonize`或 distutils，您将不会自动受益于 CPython 为消除歧义而生成的特定于平台的文件扩展名，例如 CPython 3.5 的常规 64 位 Linux 安装上的`yourmod.cpython-35m-x86_64-linux-gnu.so`。
+编译后，将 `yourmod.so` （Windows 的 `yourmod.pyd` ）文件写入目标目录，您的模块 `yourmod` 可以像任何其他 Python 模块一样导入。请注意，如果您不依赖于 `cythonize` 或 distutils，您将不会自动受益于 CPython 为消除歧义而生成的特定于平台的文件扩展名，例如 CPython 3.5 的常规 64 位 Linux 安装上的 `yourmod.cpython-35m-x86_64-linux-gnu.so` 。
 
 ## 基本 setup.py
 
-Cython 提供的 distutils 扩展允许您将`.pyx`文件直接传递到安装文件中的`Extension`构造函数。
+Cython提供的setup扩展允许你在配置文件中将 `.pyx` 文件直接传递给 `Extension` 构造器。
 
-如果你有一个 Cython 文件要转换为编译扩展名，比如文件名`example.pyx`，关联的`setup.py`将是：
+如果你有一个 Cython 文件要转换为编译的扩展模块，比如文件名 `example.pyx`，关联的 `setup.py` 将是：
 
-```py
+```python
 from distutils.core import setup
 from Cython.Build import cythonize
 
 setup(
     ext_modules = cythonize("example.pyx")
 )
-
 ```
 
-要更全面地了解`setup.py`官方 [`distutils`](https://docs.python.org/3/library/distutils.html#module-distutils "(in Python v3.7)") 文档。要编译扩展以在当前目录中使用，请使用：
+如果你以这么方式直接在Cython上生成模块，你可能还需要告知pip为了执行这个 `setup.py` 需要**cython**、遵循 *PEP-518 <https://www.python.org/dev/peps/pep-0518/>* ，创建一个 `pyproject.toml` ，并且至少包含以下内容：
 
-```py
+```config
+[build-system]
+requires = ["setuptools", "wheel", "Cython"]
+```
+
+要更全面地了解 `setup.py` 可以查看[官方setup文档](https://docs.python.org/3/library/distutils.html#module-distutils "(in Python v3.7)") 。要编译扩展以在当前目录中使用，请使用：
+
+```bash
 $ python setup.py build_ext --inplace
-
 ```
 
 ### 配置 C-Build
 
-如果您在非标准位置包含文件，则可以将`include_path`参数传递给`cythonize`：
+如果您在非标准位置包含文件，你可以给 `cythonize` 传递一个 `include_path` 参数：
 
-```py
+```python
 from distutils.core import setup
 from Cython.Build import cythonize
 
@@ -98,29 +107,42 @@ setup(
 
 ```
 
-通常，提供 C 级 API 的 Python 包提供了一种查找必要包含文件的方法，例如，为 NumPy：
+通常，提供 C 级 API 的 Python 包提供了查找必要包含文件的方法，例如，对于 NumPy而言：
 
-```py
+```python
 include_path = [numpy.get_include()]
 
 ```
 
-注意
+> 请注意：使用内存视图或使用 `import numpy` 导入 NumPy 并不意味着您必须添加 NumPy 包含文件的路径。只有在使用 `cimport numpy` 时才需要添加此路径。
 
-使用内存视图或使用`import numpy`导入 NumPy 并不意味着您必须添加 NumPy 包含文件的路径。只有在使用`cimport numpy`时才需要添加此路径。
-
-尽管如此，您仍然会收到编译器中的以下警告，因为 Cython 使用的是已弃用的 Numpy API：
+尽管如此，您仍然会收到编译器中的以下警告，因为 Cython 没有禁用已弃用的过时的 Numpy API：
 
 ```py
 .../include/numpy/npy_1_7_deprecated_api.h:15:2: warning: #warning "Using deprecated NumPy API, disable it by " "#defining NPY_NO_DEPRECATED_API NPY_1_7_API_VERSION" [-Wcpp]
 
 ```
 
-目前，这只是一个警告，你可以忽略。
+在Cython3.0中，你可以通过在生成模块时定义C宏 `NPY_NO_DEPRECATED_API` 为 `NPY_1_7_API_VERSION` 的方式来去掉这个警告信息。
 
-如果需要指定编译器选项，要链接的库或其他链接器选项，则需要手动创建`Extension`实例（请注意，glob 语法仍可用于在一行中指定多个扩展名）：
+```python
+# distutils: define_macros=NPY_NO_DEPRECATED_API=NPY_1_7_API_VERSION
+```
 
-```py
+或者这样：
+
+```python
+Extension(
+    ...,
+    define_macros=[("NPY_NO_DEPRECATED_API", "NPY_1_7_API_VERSION")],
+)
+```
+
+在使用旧版本的Cython时，设置这个宏会导致编译为C文件的行为失败，因为Cython生成了使用过时的C-API的代码。但是在比较新版本的NumPy（包括1.18.x）中，这个警告信息没有任何实质的影响。你可以忽略这条警告，直到你或者你写的包的用户使用更新的去掉这个过时了很久的API的比较新的NumPy版本 -- 同时你还必须使用Cython3.0 。 因此，你越早切换到Cython3.0版本，对于那些使用你写的包的用户来说越好。
+
+如果你需要指定编译器选项、要链接的库或其他链接器选项，你需要手动创建 `Extension` 实例（请注意，glob通配符语法仍可用于在一行中指定多个扩展名）：
+
+```python
 from distutils.core import setup
 from distutils.extension import Extension
 from Cython.Build import cythonize
@@ -143,30 +165,30 @@ setup(
 
 ```
 
-请注意，使用 setuptools 时，您应该在 Cython 之前导入它，因为 setuptools 可能会替换 distutils 中的`Extension`类。否则，两人可能不同意这里使用的课程。
+请注意，使用 setuptools 时，您应该在 Cython 之前导入它，不然的话Cython和setuptools可能会在使用什么类上冲突。
 
-另请注意，如果使用 setuptools 而不是 distutils，则运行`python setup.py install`时的默认操作是创建一个压缩的`egg`文件，当您尝试从依赖项中使用它们时，这些文件无法与`pxd`文件一起用于`pxd`文件包。为防止这种情况，请在`setup()`的参数中包含`zip_safe=False`。
+另请注意，如果使用 setuptools 而不是 distutils，则运行 `python setup.py install` 时的默认操作是创建一个压缩的 `egg` 文件。当您尝试从依赖的包中使用它们时，这些文件无法用于 `cimport` `pxd` 文件。为防止这种情况，请在 `setup()` 的参数中包含 `zip_safe=False` 。
 
-如果您的选项是静态的（例如，您不需要调用`pkg-config`之类的工具来确定它们），您也可以使用文件开头的特殊注释块直接在.pyx 或.pxd 源文件中提供它们。 ：
+如果您的选项是静态的（例如，您不需要调用 `pkg-config` 之类的工具来确定），您也可以使用文件开头的特殊注释块直接在 .pyx 或.pxd 源文件中提供它们。 ：
 
-```py
+```python
 # distutils: libraries = spam eggs
 # distutils: include_dirs = /opt/food/include
 
 ```
 
-如果您导入多个定义库的.pxd 文件，那么 Cython 会合并库列表，因此这可以按预期工作（与其他选项类似，如上面的`include_dirs`）。
+如果您导入(cimport)多个定义库的.pxd 文件，那么 Cython 会合并库列表，因此可以按预期方式工作（与其他选项类似，如上面的`include_dirs` ）。
 
-如果你有一些用 Cython 包装的 C 文件，并且你想将它们编译到你的扩展中，你可以定义 distutils `sources`参数：
+如果你有一些用 Cython 包装的 C 文件，并且你想将它们编译到你的扩展中，你可以定义 setuptools的 `sources`参数：
 
-```py
+```python
 # distutils: sources = helper.c, another_helper.c
 
 ```
 
-请注意，这些源将添加到当前扩展模块的源列表中。在`setup.py`文件中将其拼写如下：
+请注意，这些源将添加到当前扩展模块的源文件列表中。在 `setup.py` 中这么写：
 
-```py
+```python
 from distutils.core import setup
 from Cython.Build import cythonize
 from distutils.extension import Extension
@@ -181,11 +203,11 @@ setup(
 
 ```
 
-`Extension`类有很多选项，可以在 [distutils 文档](https://docs.python.org/extending/building.html)中找到更全面的解释。要了解的一些有用选项是`include_dirs`，`libraries`和`library_dirs`，它们指定链接到外部库时在哪里可以找到`.h`和库文件。
+`Extension` 类可以接收很多选项，可以在 [distutils 文档](https://docs.python.org/extending/building.html)中找到更全面的解释。要了解的一些有用选项是 `include_dirs` ，`libraries` 和`library_dirs` ，它们指定链接到外部库时在哪里可以找到 `.h` 和库文件。
 
-有时这还不够，你需要更精细的自定义 distutils `Extension`。为此，您可以提供自定义函数`create_extension`，以便在 Cython 处理源，依赖项和`# distutils`指令之后但在文件实际进行 Cython 化之前创建最终的`Extension`对象。该函数有 2 个参数`template`和`kwds`，其中`template`是作为 Cython 输入的`Extension`对象，`kwds`是 [`dict`](https://docs.python.org/3/library/stdtypes.html#dict "(in Python v3.7)") ，应该使用所有关键字创建`Extension`。函数`create_extension`必须返回 2 元组`(extension, metadata)`，其中`extension`是创建的`Extension`，`metadata`是元数据，将在生成的 C 文件的顶部写为 JSON。此元数据仅用于调试目的，因此您可以在其中放置任何内容（只要它可以转换为 JSON）。默认功能（在`Cython.Build.Dependencies`中定义）是：
+有时这还不够，你需要更精细的自定义 setuptools **`Extension`**。为此，您可以提供自定义函数 `create_extension` ，以便在 Cython 处理源，依赖项和 `# distutils` 指令之后但在生成Cython文件之前创建最终的 `Extension` 对象。该函数有 2 个参数 `template` 和 `kwds` ，其中 `template` 是作为 Cython 输入的 `Extension` 对象，`kwds`是一个包含了所有用于创建 **Extension** 的关键字参数的字典 [`dict`](https://docs.python.org/3/library/stdtypes.html#dict "(in Python v3.7)") 。函数 `create_extension` 必须返回 二元元组 `(extension, metadata)` ，其中 `extension` 是创建的**`Extension`**， `metadata` 是元数据 -- 会在生成的 C 文件的顶部被以JSON格式输出。此元数据仅用于调试目的，因此您可以在其中放置任何内容（只要它可以转换为 JSON）。默认函数（在`Cython.Build.Dependencies`中定义）是：
 
-```py
+```python
 def default_create_extension(template, kwds):
     if 'depends' in kwds:
         include_dirs = kwds.get('include_dirs', []) + ["."]
@@ -199,11 +221,11 @@ def default_create_extension(template, kwds):
 
 ```
 
-如果您将字符串而不是`Extension`传递给`cythonize()`，`template`将是没有来源的`Extension`。例如，如果执行`cythonize("*.pyx")`，`template`将为`Extension(name="*.pyx", sources=[])`。
+如果您将字符串而不是 **Extension** 传递给 `cythonize()` ，`template` 将是没有源文件参数的 **Extension**。例如，如果执行 `cythonize("*.pyx")` ，`template` 将为 `Extension(name="*.pyx", sources=[])`。
 
-举个例子，这会将`mylib`作为库添加到每个扩展名中：
+举个例子，这会将 `mylib` 作为库添加到每个扩展库中：
 
-```py
+```python
 from Cython.Build.Dependencies import default_create_extension
 
 def my_create_extension(template, kwds):
@@ -215,9 +237,7 @@ ext_modules = cythonize(..., create_extension=my_create_extension)
 
 ```
 
-Note
-
-如果你并行 Cython 化（使用`nthreads`参数），那么`create_extension`的参数必须是 pickleable。特别是，它不能是 lambda 函数。
+> 请注意：如果你使用并行化的 Cython（使用`nthreads`参数），那么 `create_extension` 的参数必须可以被对象序列化。且它不能是匿名函数（lambda）。
 
 ### Cythonize 参数
 
