--- a/docs/29.md
+++ b/docs/29.md
@@ -698,53 +698,65 @@ If set to True, raise errors on overflowing C integer arithmetic operations. Inc
   > | C float point浮点数 或者 C integer | C float point浮点数 | 返回类型是C float point浮点数，结果可能是复数的时候为NaN | C real 或者 complex（牺牲一些性能） |
   > `cpow=True` 时的行为极大程度的将结果的类型保留为一个操作数一样，反之将遵循Python的行为根据输入值的不同而灵活地返回一个类型。
   > 在Cython3.0中引入，默认值为False；在引入这个选项之前的行为符合 `cpow=True` 的版本
+
 * `always_allow_keywords` (True / False)
   > 当设置为False时，在构建函数或者方法的时候采用 `METH_NOARGS` 和 `METH_O` 的签名 -- 代表接收0个或者是一个参数。对于使用超过一个参数的特殊方法没有影响。在Cython0.X中是默认行为，现在被Python 语义替代。在Cython3.0以及以后的版本中默认为False。
 
+* `c_api_binop_methods` (True / False)
+  > 当为True的时候，使得二元运算符对应的特殊方法（比如， `__add__` 等）表现遵循底层的C级别的API槽的语义，比如对于正常和反向的运算符只保留一个方法。在Cython0.X中曾经是默认行为，现在被Python语义替代。在Cython3.0以及以后的版本中默认为False。（译者注：Python语义会使用 `__add__` 和 `__radd__`, 也可以参考 [扩展类型的特殊方法](26.md))
 * `profile` (True / False)
-  > Write hooks for Python profilers into the compiled C code. Default is False.
+  > 将Python性能分析工具写入编译的C代码的写入钩子。默认为False。
 
-`linetrace` (True / False)
+* `linetrace` (True / False)
+  > 将Python性能工具的行追踪和覆盖率报告写入编译的C代码的写入钩子。启用这个也会启用上面的 `profiling`。 默认为False。注意：生成的模块不会真的**使用**行追踪，除非你还将C宏定义 `CYTHON_TRACE=1` 传递给C编译器（比如在 setuptools 的 `define_marcos` 选项中）。定义宏 `CYTHON_TRACE_NOGIL=1` 来添加 `nogil` 的函数和代码块。
 
-Write line tracing hooks for Python profilers or coverage reporting into the compiled C code. This also enables profiling. Default is False. Note that the generated module will not actually use line tracing, unless you additionally pass the C macro definition `CYTHON_TRACE=1` to the C compiler (e.g. using the distutils option `define_macros`). Define `CYTHON_TRACE_NOGIL=1` to also include `nogil` functions and sections.
+* `infer_types` (True / False)
+  > 是否在函数主体中对没有标明类型的变量的静态类型进行推理。
+  > 默认值为None，即只进行最安全的推理（即完全不改变语义）。
+  > 特别的，对算术表达式中的整数类型的变量进行类型推理是不安全的（因为可能会有溢出的问题），因此必须被显式的请求（即设置为True）。 
 
-`infer_types` (True / False)
+* `language_level` (2/3/3str)
+> 全局的设置模块编译时使用的Python语言级别（2还是3）。默认行为是在Cython0.X中保留对Python2的兼容，在Cython3.X中使用Python3。如果要启用Python3的源代码语义，在模块文件的开头（接近首行）将这个指令值设置为3 或者 3str，或者在命令行中将 "-3" 或者 "-3str" 这个参数传递给编译器。如果要使用Python2语义，参数对应的改为 2 或者 "-2"。 `3str` 这个选项启用Python3语义但是在代码在Python2中运行的时候不会把 `str` 类型 没有加前缀的字符串字面量转换为 `unicode`。语言级别为2的时候会出于 int/long 语义模糊的原因忽略类似 `x: int` 的类型注解。注意，cimported的文件，除非显式的声明，将会继承被引入模块的这项设置。被引入（Include）的文件总是会继承这个设置。
 
-Infer types of untyped variables in function bodies. Default is None, indicating that only safe (semantically-unchanging) inferences are allowed. In particular, inferring _integral_ types for variables _used in arithmetic expressions_ is considered unsafe (due to possible overflow) and must be explicitly requested.
+* `c_string_type` (bytes / str / unicode)
+  > 全局的设置从 `char*` 和 `std::string` 类型 隐式强制转换的类型。
 
-`language_level` (2/3/3str)
+* `c_string_encoding` (ascii, default, utf-8, etc.)
+  > 全局的设置将 `char*` 和 `std::string` 类型隐式强制转换为unicode对象时使用的编码。unicode对象强制转换为C类型仅在该设置为 `ascii` 或者 `default` 的时候被允许。 `default` 在Python3中代表 utf-8, 在Python2中几乎等同于 ascii。
 
-Globally set the Python language level to be used for module compilation. Default is compatibility with Python 2\. To enable Python 3 source code semantics, set this to 3 (or 3str) at the start of a module or pass the “-3” or “–3str” command line options to the compiler. The `3str` option enables Python 3 semantics but does not change the `str` type and unprefixed string literals to `unicode` when the compiled code runs in Python 2.x. Note that cimported files inherit this setting from the module being compiled, unless they explicitly set their own language level. Included source files always inherit this setting.
+* `type_version_tag` (True / False)
+  > 启用通过设置类型标识 `Py_TPFLAGS_HAVE_VERSION_TAG` 为 CPython中的扩展类型添加的属性缓存。
+  > 默认值为True，Cython实现了的类型对应的属性缓存是启用的。在少数情况下，当一个类型需要欺骗内部的 `tp_dict` 因此不需要在意缓存一致性的时候，可以将这个选项设置为False。
 
-`c_string_type` (bytes / str / unicode)
+* `unraisable_tracebacks` (True / False)
+  > 在压制没有被触发的异常时是否将traceback打印出来。
+  > 译者注：在Cython中有些情况下，函数内部的异常会被压制、不触发（仅打印到控制台）
 
-Globally set the type of an implicit coercion from char* or std::string.
+* `iterable_coroutine` (True / False)
+  > [PEP 492](https://www.python.org/dev/peps/pep-0492/) 要求为了异步函数在非异步的上下文中被误用，异步函数的协程必须不可迭代。但是，这使得编写向后兼容的代码变得艰难、且低效 -- 比如使用Cython中的异步函数协程但是也需要和使用旧版本yield-from语法的Python代码互动，比如Python3.5之前的asyncio。这个指令可以应用在模块中，或者是有选择的作为装饰器写在异步函数的协程中来使得该协程可迭代，从而能够兼容旧版本的yield-from语法。
 
-`c_string_encoding` (ascii, default, utf-8, etc.)
+* `annotation_typing` (True / False)
+  > 使用函数参数的注解来决定变量的类型。默认为True（可以被禁止）。
+  > 因为Python并不强制写类型注解，设置为False可以更好的和Python代码兼容。从Cython3.0版本起， `annotation_typing` 可以针对每个函数或者是类来分别设置（译者注：比如使用 `@cython.annotation_typing` 装饰器, 参考[这里](docs/17.md#禁用注解)）
 
-Globally set the encoding to use when implicitly coercing char* or std:string to a unicode object. Coercion from a unicode object to C type is only allowed when set to `ascii` or `default`, the latter being utf-8 in Python 3 and nearly-always ascii in Python 2.
+* `emit_code_comments` (True / False)
+  > 是否将代码逐行的复制到生成文件的C语言代码的注释中，来帮助理解生成的代码。要获取覆盖率报告的话要求该项设置为True。
 
-`type_version_tag` (True / False)
+* `cpp_locals` (True / False)
+  > 使 C ++变量表现的更像是Python变量 -- 允许它们处于未绑定的状态，而不是总是在函数的开头完成对于它们的默认构造。更多细节可以看 [cpp_locals指令](docs/31.md).
 
-Enables the attribute cache for extension types in CPython by setting the type flag `Py_TPFLAGS_HAVE_VERSION_TAG`. Default is True, meaning that the cache is enabled for Cython implemented types. To disable it explicitly in the rare cases where a type needs to juggle with its `tp_dict` internally without paying attention to cache consistency, this option can be set to False.
+* `legacy_implicit_noexcept` (True / False)
+  > 是否遵循遗留的noexcept风格。
+  > 当设置为True时，`cdef` 的函数默认不会传播引发的异常。因此，函数会表现地更新是声明了 `noexcept` 关键字的模式。更多细节可以看[错误返回值](docs/24.md#错误返回值).
+  > 将这个指令设置为True的时候，Cython3.0会使用和Cython0.X一样的语义。加入这个指令只是为了帮助Cython3.0之前写的历史遗留代码更好的迁移到3.0。这个选项以后会被删除。
+  
+### 配置优化项
 
-`unraisable_tracebacks` (True / False)
+* `optimize.use_switch` (True / False)
+  > Whether to expand chained if-else statements (including statements like `if x == 1 or x == 2:`) into C switch statements. This can have performance benefits if there are lots of values but cause compiler errors if there are any duplicate values (which may not be detectable at Cython compile time for all C constants). Default is True.
 
-Whether to print tracebacks when suppressing unraisable exceptions.
-
-`iterable_coroutine` (True / False)
-
-[PEP 492](https://www.python.org/dev/peps/pep-0492/) specifies that async-def coroutines must not be iterable, in order to prevent accidental misuse in non-async contexts. However, this makes it difficult and inefficient to write backwards compatible code that uses async-def coroutines in Cython but needs to interact with async Python code that uses the older yield-from syntax, such as asyncio before Python 3.5\. This directive can be applied in modules or selectively as decorator on an async-def coroutine to make the affected coroutine(s) iterable and thus directly interoperable with yield-from.
-
-### 可配置的优化
-
-`optimize.use_switch` (True / False)
-
-Whether to expand chained if-else statements (including statements like `if x == 1 or x == 2:`) into C switch statements. This can have performance benefits if there are lots of values but cause compiler errors if there are any duplicate values (which may not be detectable at Cython compile time for all C constants). Default is True.
-
-`optimize.unpack_method_calls` (True / False)
-
-Cython can generate code that optimistically checks for Python method objects at call time and unpacks the underlying function to call it directly. This can substantially speed up method calls, especially for builtins, but may also have a slight negative performance impact in some cases where the guess goes completely wrong. Disabling this option can also reduce the code size. Default is True.
+* `optimize.unpack_method_calls` (True / False)
+  > Cython can generate code that optimistically checks for Python method objects at call time and unpacks the underlying function to call it directly. This can substantially speed up method calls, especially for builtins, but may also have a slight negative performance impact in some cases where the guess goes completely wrong. Disabling this option can also reduce the code size. Default is True.
 
 ### 警告
 
