--- a/docs/29.md
+++ b/docs/29.md
@@ -716,7 +716,7 @@ If set to True, raise errors on overflowing C integer arithmetic operations. Inc
   > 特别的，对算术表达式中的整数类型的变量进行类型推理是不安全的（因为可能会有溢出的问题），因此必须被显式的请求（即设置为True）。 
 
 * `language_level` (2/3/3str)
-> 全局的设置模块编译时使用的Python语言级别（2还是3）。默认行为是在Cython0.X中保留对Python2的兼容，在Cython3.X中使用Python3。如果要启用Python3的源代码语义，在模块文件的开头（接近首行）将这个指令值设置为3 或者 3str，或者在命令行中将 "-3" 或者 "-3str" 这个参数传递给编译器。如果要使用Python2语义，参数对应的改为 2 或者 "-2"。 `3str` 这个选项启用Python3语义但是在代码在Python2中运行的时候不会把 `str` 类型 没有加前缀的字符串字面量转换为 `unicode`。语言级别为2的时候会出于 int/long 语义模糊的原因忽略类似 `x: int` 的类型注解。注意，cimported的文件，除非显式的声明，将会继承被引入模块的这项设置。被引入（Include）的文件总是会继承这个设置。
+  > 全局的设置模块编译时使用的Python语言级别（2还是3）。默认行为是在Cython0.X中保留对Python2的兼容，在Cython3.X中使用Python3。如果要启用Python3的源代码语义，在模块文件的开头（接近首行）将这个指令值设置为3 或者 3str，或者在命令行中将 "-3" 或者 "-3str" 这个参数传递给编译器。如果要使用Python2语义，参数对应的改为 2 或者 "-2"。 `3str` 这个选项启用Python3语义但是在代码在Python2中运行的时候不会把 `str` 类型 没有加前缀的字符串字面量转换为 `unicode`。语言级别为2的时候会出于 int/long 语义模糊的原因忽略类似 `x: int` 的类型注解。注意，cimported的文件，除非显式的声明，将会继承被引入模块的这项设置。被引入（Include）的文件总是会继承这个设置。
 
 * `c_string_type` (bytes / str / unicode)
   > 全局的设置从 `char*` 和 `std::string` 类型 隐式强制转换的类型。
@@ -753,70 +753,66 @@ If set to True, raise errors on overflowing C integer arithmetic operations. Inc
 ### 配置优化项
 
 * `optimize.use_switch` (True / False)
-  > Whether to expand chained if-else statements (including statements like `if x == 1 or x == 2:`) into C switch statements. This can have performance benefits if there are lots of values but cause compiler errors if there are any duplicate values (which may not be detectable at Cython compile time for all C constants). Default is True.
+  > 是否将链条式的if-else语句（包含 `if x == 1 or x == 2:` 这样的语句）展开为C语言的switch语句。如果有很多值那么会有性能收益，但是在存在重复值的时候导致编译器错误（并不是所有C常量在Cython编译的时候都可以被检测）。
+  > 默认True。
 
 * `optimize.unpack_method_calls` (True / False)
-  > Cython can generate code that optimistically checks for Python method objects at call time and unpacks the underlying function to call it directly. This can substantially speed up method calls, especially for builtins, but may also have a slight negative performance impact in some cases where the guess goes completely wrong. Disabling this option can also reduce the code size. Default is True.
+  > Cython可以在运行Python方法时生成乐观的检查，并且将潜在的函数解包以直接调用。对于内置的函数而言，这可能会显著的加快调用速度，但是对于某些情况猜测错误时产生一个轻微的性能下降。
+  > 禁用这个选项可以减少生成的代码量。默认为True。
 
 ### 警告
 
-所有警告指令都采用 True / False 作为打开/关闭警告的选项。
+所有警告指令都采用 True / False 作为打开/关闭警告的选项参数。
 
-`warn.undeclared` (default False)
+* `warn.undeclared` (default False)
+  > 当任何变量没有用 `cdef` 声明，而是被隐式声明是发出警告
 
-Warns about any variables that are implicitly declared without a `cdef` declaration
+* `warn.unreachable` (default True)
+  > 当代码路径静态地被确定为不可到达时发出警告，例如没有条件的返回两次（译者注：类似于IDEA和Pycharm发出的 `code unreachable` 警告）
 
-`warn.unreachable` (default True)
+* `warn.maybe_uninitialized` (default False)
+  > 当有可能没有被初始化的变量被使用时发出警告
 
-Warns about code paths that are statically determined to be unreachable, e.g. returning twice unconditionally.
+* `warn.unused` (default False)
+  > 对没有被使用的变量和声明发出警告
 
-`warn.maybe_uninitialized` (default False)
+* `warn.unused_arg` (default False)
+  > 对没有被用到的函数参数发出警告
 
-Warns about use of variables that are conditionally uninitialized.
+* `warn.unused_result` (default False)
+  > 针对由于使用了同样对名称因而没有被用到的赋值语句发出警告，例如 `r = 2; r = 1 + 2` 此处第一句赋值没有意义。（译者注：较真的说，其实未必没有意义）
 
-`warn.unused` (default False)
-
-Warns about unused variables and declarations
-
-`warn.unused_arg` (default False)
-
-Warns about unused function arguments
-
-`warn.unused_result` (default False)
-
-Warns about unused assignment to the same name, such as `r = 2; r = 1 + 2`
-
-`warn.multiple_declarators` (default True)
-
-Warns about multiple variables declared on the same line with at least one pointer type. For example `cdef double* a, b` - which, as in C, declares `a` as a pointer, `b` as a value type, but could be mininterpreted as declaring two pointers.
+* `warn.multiple_declarators` (default True)
+  > 对声明在同一行带至少一个指针类型的多个变量发出警告（可能发生类型声明错误），比如 `cdef double* a, b` 在 C 语言中, 声明 `a` 为指针, `b` 为数值, 但是可能被错误的解释为两个指针。
+  > 译者注：Cython鼓励Java风格的声明方式，且认为C风格的声明方式过时、不建议使用。
 
 ### 如何设置指令
 
-#### 全球
+#### 全局
 
-可以通过文件顶部附近的特殊标题注释设置编译器指令，如下所示：
+可以通过文件顶部附近写一行特殊标题注释设置编译器指令，如下所示：
 
-```py
+```python
 # cython: language_level=3, boundscheck=False
 
 ```
 
 注释必须出现在任何代码之前（但可以出现在其他注释或空格之后）。
 
-也可以使用-X 开关在命令行上传递指令：
+也可以使用 `-X` 开关在命令行上传递指令：
 
-```py
+```bash
 $ cython -X boundscheck=True ...
 
 ```
 
-在命令行上传递的指令将覆盖在头注释中设置的指令。
+在命令行上传递的指令将覆盖在头部注释中设置的指令。
 
-#### 本地
+#### 局部
 
-对于本地块，您需要使用特殊的内置`cython`模块：
+对于局部代码块，您需要使用特殊的内置 `cython` 模块：
 
-```py
+```python
 #!python
 cimport cython
 
@@ -824,26 +820,24 @@ cimport cython
 
 然后你可以使用指令作为装饰器或在 with 语句中，如下所示：
 
-```py
+```python
 #!python
-@cython.boundscheck(False) # turn off boundscheck for this function
+@cython.boundscheck(False) # 关闭这个函数的边界检查
 def f():
     ...
-    # turn it temporarily on again for this block
+    # 为这个代码块临时打开边界检查
     with cython.boundscheck(True):
         ...
 
 ```
 
-警告
-
-这两种设置指令的方法是**而不是**，它们使用-X 选项覆盖命令行上的指令。
+> 警告:这两种设置指令的方法不会被命令行中通过 `-X` 传递的参数覆盖（译者注：即设置在局部的指令拥有最高的优先级）
 
 #### 在`setup.py` 中
 
-通过将关键字参数传递给`cythonize`，也可以在`setup.py`文件中设置编译器指令：
+通过将关键字参数传递给 `cythonize` ，也可以在 `setup.py` 文件中设置编译器指令：
 
-```py
+```python
 from distutils.core import setup
 from Cython.Build import cythonize
 
@@ -854,4 +848,4 @@ setup(
 
 ```
 
-这将覆盖`compiler_directives`字典中指定的默认指令。请注意，如上所述的显式每文件或本地指令优先于传递给`cythonize`的值。
+这将覆盖`compiler_directives` 字典中指定的默认指令。请注意，如上所述的每个文件显式设置的或本地指令优先级高过传递给 `cythonize`的值（译者注：即优先级是 **局部 > 文件头部 > 传递给cythonize的值** ）。
