--- a/docs/30.md
+++ b/docs/30.md
@@ -176,7 +176,7 @@ def rectArea(x0, y0, x1, y1):
 如果在 Cython 代码中，我们有一个已经'早期绑定'的变量（即，显式声明为 Rectangle 类型，或者转换为 Rectangle 类型），那么调用其 area 方法将使用高效的 C 代码路径并跳过 Python 开销。但是如果在 Cython 或常规 Python 代码中我们有一个存储 Rectangle 对象的常规对象变量，那么调用 area 方法将需要：
 
 *   属性查找的方式查找计算面积方法( `area` )
-*   把参数打包为一个元组和把关键字参数打包为一个字典（在这种情况下两者空的）
+*   把非关键字参数打包为一个元组、把关键字参数打包为一个字典（在这种情况下两者空的，参考上面的`Rectangle` 类的 `area`方法参数只有 `self`）
 *   使用 Python API 调用该方法
 
 并且在计算面积的area方法本身内：
