--- a/docs/31.md
+++ b/docs/31.md
@@ -4,32 +4,32 @@
 
 ## 概述
 
-Cython 对大多数 C ++语言都有本机支持。特别：
+Cython 自带对大多数 C ++语言的支持。具体来说：
 
-*   可以使用`new`和`del`关键字动态分配 C ++对象。
+*   可以使用 `new` 和 `del` 关键字动态分配 C ++对象。
 *   C ++对象可以进行堆栈分配。
-*   可以使用 new 关键字`cppclass`声明 C ++类。
+*   可以使用 新关键字 `cppclass` 声明 C ++类。
 *   支持模板化的类和函数。
-*   支持重载功能。
+*   支持重载函数。
 *   支持重载 C ++运算符（例如 operator +，operator []，...）。
 
-### 程序概述
+### 流程概述
 
 包装 C ++文件的一般过程现在可以描述如下：
 
-*   在`setup.py`脚本中指定 C ++语言，或在源文件中指定本地。
-*   使用`cdef extern from`块和（如果存在）C ++命名空间名称创建一个或多个`.pxd`文件。在这些块中：
-    *   将类声明为`cdef cppclass`块
+*   （声明语言）在 `setup.py` 脚本或在本地源文件中指定 C ++语言，。
+*   （提供定义）使用 `cdef extern from` 代码块和（如果存在）C ++命名空间名称创建一个或多个 `.pxd` 文件。在这些块中：
+    *   将类声明为 `cdef cppclass` 代码块
     *   声明公共名称（变量，方法和构造函数）
-*   `cimport`它们位于一个或多个扩展模块（`.pyx`文件）中。
+*   （调用）在一个或多个扩展模块（`.pyx`文件）中 `cimport` 它们。
 
 ## 一个简单的教程
 
 ### 示例 C ++ API
 
-这是一个很小的 C ++ API，我们将在本文档中将其作为示例。我们假设它将位于名为`Rectangle.h`的头文件中：
+这是一个简短的 C ++ API，我在本文档中用作示例。我们假设它将位于名为 `Rectangle.h` 的头文件中：
 
-```py
+```C++
 #ifndef RECTANGLE_H
 #define RECTANGLE_H
 
@@ -50,18 +50,18 @@ namespace shapes {
 
 ```
 
-以及名为`Rectangle.cpp`的文件中的实现：
+以及名为 `Rectangle.cpp` 的文件中的实现：
 
-```py
+```C++
 #include <iostream>
 #include "Rectangle.h"
 
 namespace shapes {
 
-    // Default constructor
+    // 默认构造器
     Rectangle::Rectangle () {}
 
-    // Overloaded constructor
+    // 重载构造器
     Rectangle::Rectangle (int x0, int y0, int x1, int y1) {
         this->x0 = x0;
         this->y0 = y0;
@@ -69,22 +69,22 @@ namespace shapes {
         this->y1 = y1;
     }
 
-    // Destructor
+    // 析构器
     Rectangle::~Rectangle () {}
 
-    // Return the area of the rectangle
+    // 返回矩形的面积
     int Rectangle::getArea () {
         return (this->x1 - this->x0) * (this->y1 - this->y0);
     }
 
-    // Get the size of the rectangle.
-    // Put the size in the pointer args
+    // 获取矩形面积
+    // 把面积数值放到指针参数中
     void Rectangle::getSize (int *width, int *height) {
         (*width) = x1 - x0;
         (*height) = y1 - y0;
     }
 
-    // Move the rectangle by dx dy
+    // 移动矩阵,移动向量为（dx,dy)
     void Rectangle::move (int dx, int dy) {
         this->x0 += dx;
         this->y0 += dy;
@@ -95,24 +95,24 @@ namespace shapes {
 
 ```
 
-这非常愚蠢，但应该足以证明所涉及的步骤。
+这非常简单，但应该足以说明所涉及的步骤。
 
 ### 声明 C ++类接口
 
-包装 C ++类的过程与包装普通 C 结构的过程非常类似，只需添加几个。让我们从创建基本`cdef extern from`块开始：
+包装 C ++类的过程与包装普通 C 结构的过程非常类似，但是有几个额外步骤。让我们从创建基本 `cdef extern from` 块开始：
 
-```py
+```python
 cdef extern from "Rectangle.h" namespace "shapes":
 
 ```
 
-这将使得 Rectangle 的 C ++类 def 可用。请注意名称空间声明。命名空间仅用于创建对象的完全限定名称，并且可以嵌套（例如`"outer::inner"`）或甚至引用类（例如`"namespace::MyClass`在 MyClass 上声明静态成员）。
+这将使得 Rectangle 的 C ++类定义 可用。请注意命名空间的声明。命名空间仅用于创建完全限定的对象名称（完整格式），并且可以嵌套（例如 `"outer::inner"` ）或甚至引用类（例如 `"namespace::MyClass` 声明 MyClass 上的静态成员）。
 
 #### 使用 cdef cppclass 声明类
 
-现在，让我们从块中将 Rectangle 类添加到此 extern - 只需从 Rectangle.h 复制类名并调整 Cython 语法，现在它变为：
+现在，让我们将 Rectangle 类添加到此 **`extern`** 的代码块重 - 只需从 Rectangle.h 复制类名并调整 Cython 语法，现在它变为：
 
-```py
+```python
 cdef extern from "Rectangle.h" namespace "shapes":
     cdef cppclass Rectangle:
 
@@ -120,13 +120,13 @@ cdef extern from "Rectangle.h" namespace "shapes":
 
 #### 添加公共属性
 
-我们现在需要声明在 Cython 上使用的属性和方法。我们将这些声明放在一个名为`Rectangle.pxd`的文件中。您可以将其视为可由 Cython 读取的头文件：
+我们现在需要声明在 Cython 上使用的属性和方法。我们将这些声明放在一个名为 `Rectangle.pxd` 的文件中。您可以将其视为可由 Cython 读取的头文件：
 
-```py
+```python
 cdef extern from "Rectangle.cpp":
     pass
 
-# Declare the class with cdef
+# 用cdef 定义类
 cdef extern from "Rectangle.h" namespace "shapes":
     cdef cppclass Rectangle:
         Rectangle() except +
@@ -140,57 +140,57 @@ cdef extern from "Rectangle.h" namespace "shapes":
 
 请注意，构造函数声明为“except +”。如果 C ++代码或初始内存分配由于失败而引发异常，这将使 Cython 安全地引发适当的 Python 异常（见下文）。如果没有此声明，Cython 将不会处理源自构造函数的 C ++异常。
 
-我们使用这些线：
+我们使用这几行代码：
 
-```py
+```python
 cdef extern from "Rectangle.cpp":
     pass
 
 ```
 
-包含来自`Rectangle.cpp`的 C ++代码。也可以指定`Rectangle.cpp`为源的 distutils。为此，您可以在`.pyx`（不是`.pxd`）文件的顶部添加此指令：
+来 Include `Rectangle.cpp`的 C ++代码。也可以在setuptools中将 `Rectangle.cpp` 指定为源文件 -- 您可以在 `.pyx`（不是 `.pxd` ）文件的顶部添加一行编译器指令：
 
-```py
+```python
 # distutils: sources = Rectangle.cpp
 
 ```
 
-请注意，使用`cdef extern from`时，指定的路径相对于当前文件，但如果使用 distutils 指令，则路径相对于`setup.py`。如果要在运行`setup.py`时发现源的路径，可以使用`cythonize()`功能的`aliases`参数。
+请注意，使用 `cdef extern from` 时，指定的路径是与当前文件相对的相对路径，但如果使用 distutils 指令，则路径与 `setup.py` 相对。如果要在运行 `setup.py` 时发现源的路径，可以使用 `cythonize()` 函数的 `aliases` 参数。
 
 #### 用包装的 C ++类声明一个 var
 
-我们将创建一个名为`rect.pyx`的`.pyx`文件来构建我们的包装器。我们使用的是`Rectangle`以外的名称，但如果您希望为包装器提供与 C ++类相同的名称，请参阅 [解决命名冲突](external_C_code.html#resolve-conflicts) 的部分。
+我们将创建一个名为 `rect.pyx` 的 `.pyx` 文件来构建我们的包装器。我们使用的是 `Rectangle` 以外的名称，但如果您希望为包装器提供与 C ++类相同的名称，请参阅 [解决命名冲突](docs/28.md#解决命名冲突---c-命名规范) 这部分文档。
 
-在其中，我们使用 cdef 使用 C ++ `new`语句声明类的 var：
+在其中，我们需要对使用 C ++ `new`语句声明类的使用 cdef：
 
-```py
+```python
 # distutils: language = c++
 
 from Rectangle cimport Rectangle
 
 def main():
-    rec_ptr = new Rectangle(1, 2, 3, 4)  # Instantiate a Rectangle object on the heap
+    rec_ptr = new Rectangle(1, 2, 3, 4)  # 在堆上初始化一个Rectangle对象
     try:
         rec_area = rec_ptr.getArea()
     finally:
-        del rec_ptr  # delete heap allocated object
+        del rec_ptr  # 删除在堆上分配的Rectangle对象
 
-    cdef Rectangle rec_stack  # Instantiate a Rectangle object on the stack
+    cdef Rectangle rec_stack  # 在栈上初始化一个Rectangle对象
 
 ```
 
-这条线：
+这一行代码：
 
-```py
+```python
 # distutils: language = c++
 
 ```
 
-是向 Cython 表明这个`.pyx`文件必须编译为 C ++。
+是向 Cython 表明这个 `.pyx` 文件必须编译为 C ++。
 
 只要它具有“默认”构造函数，也可以声明堆栈分配的对象：
 
-```py
+```python
 cdef extern from "Foo.h":
     cdef cppclass Foo:
         Foo()
@@ -201,7 +201,9 @@ def func():
 
 ```
 
-请注意，与 C ++一样，如果类只有一个构造函数并且它是一个无效的，那么就没有必要声明它。
+查看[cpp_locals指令](#cpp_locals指令)这一节的文档来寻找如何避免需求一个无参/默认 构造器的方法。
+
+请注意，与 C ++一样，如果类只有一个无参构造函数，那么就没有必要声明（因为无参构造器会自动提供）。
 
 ### 创建 Cython 包装类
 
